# rounded-noto-sans-cjk

./: .gitignore  Cargo.toml  LICENSE  README.ja.md  README.md  THIRD-PARTY-NOTICES.md  fonts.toml
.github/workflows/: ci.yml
docs/: RELEASING.md
docs/adr/: 20260716-ascii-replacement-with-source-code-pro.md  20260716-derived-font-naming.md  20260716-distribute-static-fonts.md  20260716-no-bundled-source-fonts.md  20260716-record-architecture-decisions.md
scripts/: package-release.sh  reverse_contours.py
src/: config.rs  lib.rs  main.rs  naming.rs  outline.rs  round.rs  variable_font.rs
src/variable_font/tests/: test_font.rs
